created cart-item component and connected cart dropdown with cartItems reducer

--- a/src/components/cart-dropdown/cart-dropdown.scss
+++ b/src/components/cart-dropdown/cart-dropdown.scss
@@ -8,10 +8,10 @@
   border: 1px solid black;
   background-color: white;
   top: 80px;
-  right: 140px;
+  right: 0px;
   z-index: 5;
 
-  .cart-item {
+  .cart-items {
     height: 240px;
     display: flex;
     flex-direction: column;
