--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
-  padding: 0 80px;
+  position: relative;
 
   .logo-container {
     height: 100%;
